# mcp-video-processing-service

./: .gitignore  pyproject.toml
docs/: clarifications.md  implementation.md
src/mcp_video_processing_service/: __init__.py  celery_app.py  config.py  job_models.py  job_store.py  main.py  payload_client.py  tasks.py
src/mcp_video_processing_service/api/: routes.py
src/mcp_video_processing_service/ffmpeg/: command_builder.py  probe.py  runner.py
tests/: conftest.py  test_command_builder.py  test_routes.py
