 [build-system]
 requires = ["poetry-core>=1.8.0"]
 build-backend = "poetry.core.masonry.api"

 [tool.poetry]
 name = "mcp-video-processing-service"
 version = "0.1.0"
 description = "Asynchronous video processing microservice for the movie generation platform"
 authors = ["Factory Droid <factory@factory.ai>"]
 python = "^3.11"

 [tool.poetry.dependencies]
 python = "^3.11"
 fastapi = "^0.115.0"
 uvicorn = { version = "^0.31.0", extras = ["standard"] }
 celery = "^5.3.6"
 redis = "^5.0.3"
 structlog = "^24.1.0"
 httpx = "^0.28.1"
 pydantic = "^2.7.0"
 pydantic-settings = "^2.2.1"
 python-multipart = "^0.0.9"

 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.0"
 pytest-asyncio = "^0.23.7"
 pytest-mock = "^3.12.0"
 httpx = { version = "^0.28.1", extras = ["socks"] }
 respx = "^0.21.1"

 [tool.ruff]
 target-version = "py311"
 line-length = 88
 select = ["E", "F", "W", "C", "I", "B"]
 ignore = ["E501"]

 [tool.mypy]
 python_version = "3.11"
 warn_unused_configs = true
 disallow_untyped_defs = true
 disallow_incomplete_defs = true
 no_implicit_optional = true
